# rastavision

./: .gitignore  CMakeLists.txt  run.sh
include/: camera.hpp  display_info.hpp  fragment_shader.hpp  globals.hpp  mesh.hpp  model.hpp  obj_loader.hpp  rasterizer.hpp  types_and_utils.hpp  vertex_shader.hpp
lighting/: single-light.l
src/: fragment_shader.cpp  globals.cpp  main.cpp  model.cpp  obj_loader.cpp  rasterizer.cpp  types_and_utils.cpp  vertex_shader.cpp
